# ModelZoo-PyTorch

./: .gitignore  .gitmodules  NOTICE  OWNERS  README.CN.md  README.en.md  README.md  Third_Party_Open_Source_Software_Notice  bind_pyt.py  diff.diff
.gitee/: PULL_REQUEST_TEMPLATE.en.md
ACL_PyTorch/: README.md  get_modelID.py
ACL_PyTorch/built-in/: LICENSE  README.en.md  README.md
ACL_PyTorch/built-in/audio/AASIST-L_for_Pytorch/: README.md  modify.py  modify_onnx.py  om_infer.py  om_val.py  pth2om.sh  requirements.txt  run.sh
ACL_PyTorch/built-in/audio/ASR_Transformer_for_Pytorch/: infer_and_export.py  parse_performance.py  prepare.py  readme.md  transformer.patch
ACL_PyTorch/built-in/audio/Conformer_for_Pytorch/: README.md  asr_npu_adapter.py  ctc.sh  export_acc.patch  graph_fusion.py  modify_onnx_ctc.py  modify_onnx_decoder.py  modify_onnx_encoder.py  modify_onnx_lm.py  multi_batch_beam_search.py  npu_model_adapter.py  om_val.py  preprocess.py  pth2onnx.py  requirements.txt  run.sh  transformer_lm.sh  xformer_decoder.sh  xformer_encoder.sh
ACL_PyTorch/built-in/audio/Conformer_for_Pytorch_poc/: LICENSE  README.md  asr_npu_adapter.py  compute-wer.py  export_acc.patch  graph_fusion.py  modify_onnx_ctc.py  modify_onnx_decoder.py  modify_onnx_encoder.py  multi_batch_beam_search.py  npu_model_adapter.py  om_val.py  preprocess.py  pth2onnx.py  xformer_encoder.sh
ACL_PyTorch/built-in/audio/EspNet_for_Pytoch/: README.md  acc.diff  acc.sh  acc_dynamic.diff  adaptespnet.py  encoder.sh  encoder_dynamic.sh  encoder_out_shape.json  export_onnx.diff  export_onnx.sh  export_onnx_dynamic.diff  infer_perf.py  infer_perf_dynamic.py  public_address_statement.md
ACL_PyTorch/built-in/audio/FastSpeech2_for_PyTorch/: README.md  atc.sh  om_val.py  pth2onnx.py  requirements.txt
ACL_PyTorch/built-in/audio/HiFiGAN_for_PyTorch/: README.md  atc.sh  om_val.py  pth2onnx.py  requirements.txt
ACL_PyTorch/built-in/audio/Jasper_for_PyTorch/: README.md  acl_net.py  atc.sh  diff.patch  om_infer.sh  om_infer_acl.py  pth2onnx.py  requirements.txt
ACL_PyTorch/built-in/audio/LSTM/: LSTM_get_info.py  LSTM_postprocess_data.py  LSTM_preprocess_data.py  LSTM_pth2onnx.py  ReadMe.md  acl_net.py  lstm_atc.sh  lstm_onnx_infer.py  prepare_data.sh  pyacl_infer.py  requirements.txt
ACL_PyTorch/built-in/audio/RawNet2_for_Pytorch/: LICENSE  README.md  acl_net.py  atc.sh  env.sh  evaluation.py  modify_onnx.py  om_infer.py  om_val.py  pth2onnx.py  requirements.txt
ACL_PyTorch/built-in/audio/TDNN_for_Pytorch/: ReadMe.md  acl_net.py  atc.sh  hyperparams.yaml  interfaces.py  mo.py  modify.patch  modify_onnx.py  om_infer.sh  pth2onnx.py  pyacl_infer.py  requirements.txt  tdnn_postprocess.py  tdnn_preprocess.py  tdnn_pth2onnx.py  tdnn_pyacl_infer.py
ACL_PyTorch/built-in/audio/Tacotron2_dyn_for_Pytorch/: LICENSE  README.md  acl_infer.py  atc.sh  cvt_tacotron2onnx.py  cvt_waveglow2onnx.py  om_val.py  requirements.txt  run.sh  val.py  val_pyacl.py  val_pyacl_cache.py
ACL_PyTorch/built-in/audio/Tacotron2_for_Pytorch/: README.md  acl_net.py  addweight.py  atc_static.sh  convert_tacotron22onnx.py  convert_waveglow2onnx.py  data_process.py  decoder_iter_modify.py  encoder_modify.py  get_out_node.py  get_out_type.py  om_infer_acl.py  onnx_infer.py  onnxsim.sh  requirements.txt
ACL_PyTorch/built-in/audio/Wenet2_for_Pytorch/: README.md  adaptdecoder.py  cosine_similarity.py  export_onnx_npu.py  modelzoo_level.txt  offline_encoder.sh  online_encoder.sh  recognize_om.py  requirements.txt  run.sh  static_decoder.sh  static_encoder.sh
ACL_PyTorch/built-in/audio/Wenet_for_Pytorch/: README.md  acc.diff  acl_net.py  adaptdecoder.py  adaptencoder.py  decoder.sh  encoder.sh  export_onnx.py  export_onnx.sh  get_flash_encoder_out.diff  get_no_flash_encoder_out.diff  getwer.diff  infer_perf.py  no_flash_encoder.sh  process_encoder_data_flash.py  process_encoder_data_noflash.py  recognize_attenstion_rescoring.py  requirements.txt  run_attention_rescoring.sh  run_encoder_out.sh  run_no_flash_encoder_out.sh  run_static.sh  slice_helper.py  static.py  static_decoder.sh  static_encoder.sh
ACL_PyTorch/built-in/cv/3DUnet_for_PTorch/: README.md  acl_net.py  atc.sh
ACL_PyTorch/built-in/cv/3DUnet_for_PyTorch/: 3DUnet.patch  (+5 more)
ACL_PyTorch/contrib/: CONTRIBUTING.md  ENVIRONMENTS.md
AcessScan/: README.md  access_upline.py  core_binding_config.json  link_list.txt  run_upline.sh  startRun.sh  upline_access_black_http.json
AscendIE/: README.CN.md
AscendIE/AscendIE/: readme.md
AscendIE/AscendIE/StableDiffusion/: README.md  aie_stable_diffusion_pipeline.py  background_runtime.py  background_runtime_dynamic.py  clip_score.py  pipeline_dynamic.py  requirements.txt
AscendIE/TorchAIE/built-in/cv/classification/MaskRcnn/maskrcnn_detectron2_ops/: CMakeLists.txt  maskrcnn_detectron2_ops.cpp
AscendIE/TorchAIE/built-in/cv/classification/ResNet50/: CMakeLists.txt  README.md  preprocess.sh  resnet50.cpp  resnet50.py  run.sh
AscendIE/TorchAIE/built-in/cv/detection/Yolov5/: CMakeLists.txt  README.md  build.sh  export_torch_aie.py  run.sh  val.diff  yolov5.cpp
LicenseTool/: LicenseTool.py  README.md
LicenseTool/data/: cpp_license_py_all.txt  cpp_license_tf_all.txt  cpp_license_tf_huawei.txt  py_license_tf_all.txt  py_license_tf_huawei.txt
LicenseTool/data/LICENSE_TF/: LICENSE
PyTorch/: README.CN.md
PyTorch/built-in/cv/classification/EfficientNet_for_PyTorch/infer/mxbase/: CMakeLists.txt  Resnet50ClassifyOpencv.cpp  main_opencv.cpp
PyTorch/built-in/cv/semantic_segmentation/Attention_R2U_Net_for_PyTorch/infer/mxbase/: CMakeLists.txt  build.sh
PyTorch/built-in/cv/semantic_segmentation/Attention_R2U_Net_for_PyTorch/infer/mxbase/src/: Attention_R2U_Net_for_PyTorch.cpp  Attention_R2U_Net_for_PyTorch.h  main.cpp
PyTorch/contrib/cv/pose_estimation/Hourglass_for_PyTorch/infer/mxbase/: CMakeLists.txt  build.sh
PyTorch/contrib/cv/pose_estimation/Hourglass_for_PyTorch/infer/mxbase/include/: hourglass.h  postprocess.h
PyTorch/contrib/cv/pose_estimation/Hourglass_for_PyTorch/infer/mxbase/src/: hourglass.cpp  main.cpp  postprocess.cpp
(+34823 files in other folders)
